Fix spacing and hide Num anchor link when not needed

--- a/scss/glossary.scss
+++ b/scss/glossary.scss
@@ -55,6 +55,7 @@ nav {
 
     #top {
         font-size: 11px;
+        margin-left: 22px;
     }
 
     .navbar-nav>li>a{
