--- a/scss/partials/_filter.scss
+++ b/scss/partials/_filter.scss
@@ -6,9 +6,12 @@
     .filter-by {
     }
 
+    .btn-group {
+        margin-left: 20px;
+    }
+
     ul {
         padding: 5px;
     }
-
 
 }
